Fix z-indexing on inputs

--- a/src/index.css
+++ b/src/index.css
@@ -7,11 +7,11 @@
 }
 
 .card {
-  @apply w-5/6 sm:w-auto bg-transparent rounded-2xl shadow-lg relative flex flex-col items-center overflow-hidden;
+  @apply relative w-5/6 sm:w-auto bg-transparent rounded-2xl shadow-lg flex flex-col items-center overflow-hidden bg-white;
 }
 
 .card-header {
-  @apply w-full bg-fuchsia-900 text-white p-4 pt-16 relative;
+  @apply w-full  p-6 pt-16;
 }
 
 .btn {
@@ -20,15 +20,15 @@
 
 /* INPUT */
 .inputContainer {
-  @apply relative my-4 border-b-2 text-lg focus-within:border-fuchsia-700;
+  @apply relative my-6 border-b-2 text-lg focus-within:border-fuchsia-700;
 }
 
 .input {
-  @apply outline-none block w-full appearance-none focus:outline-none bg-transparent;
+  @apply relative outline-none block w-full appearance-none focus:outline-none bg-transparent z-20;
 }
 
 .inputLabel {
-  @apply absolute top-0 duration-300 origin-0 -z-1 text-gray-400;
+  @apply absolute top-0 duration-300 origin-0 z-10 text-gray-400;
 }
 
 input:focus-within ~ label,
